# PortfolAI-CS4300-Fall-2024-Group-4

./: .gitignore  LICENSE  README.md  Reflection1.txt  TESTING.md  WORKFLOW_GUIDE.md  portfolai.html  render.yaml  review.py  security_report.py  test_ai_review.py
.github/: dependabot.yml
.github/workflows/: ai-code-review.yml  ci.yml  code-coverage.yml  coverage.yml  dependency-review.yml  deploy.yml  lint.yml  security-check.yml
portfolai/: .bandit  .coveragerc  .flake8  .gitignore  .pylintrc  TESTING.md  bandit.yaml  build.sh  conftest.py  db.sqlite3  project_report.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_api.py
portfolai/.github/: dependabot.yml
portfolai/.github/workflows/: AI_Review.yml  Create_dependabot_report.yml  Security_Check.yml  coverage.yml  test_comment.yml
portfolai/core/: admin.py  api_helpers.py  apps.py  auth_test.py  forms.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
portfolai/core/migrations/: 0001_initial.py  0002_aichatsession_airequest_and_more.py  0002_delete_watchlist.py  0003_initial.py
portfolai/core/static/chat/: chat.js  chat_style.css
portfolai/core/static/home/css/: style.css
portfolai/core/static/home/js/: api.js  learn.js  main.js  markets.js  modals.js  script.js  stock.js  ui.js  watchlist.js
portfolai/core/static/landing/: saasy-custom.css  saasy.js
portfolai/core/templates/: base.html  chat_widget.html  home.html  landing.html  learn.html  markets.html
portfolai/core/templates/registration/: login.html  signup.html
portfolai/core/tests/: analysis_test.py  auth_test.py  chat_test.py  learn_test.py  market_movers_test.py  news_test.py  stock_data_test.py  summary_test.py  test_helpers.py  view_test.py  watchlist_test.py
portfolai/core/views/: __init__.py  _clients.py  analysis.py  auth.py  basic.py  chat.py  learn.py  market_movers.py  news.py  stock_data.py  watchlist.py
portfolai/home/: urls.py  utils.py  views.py
portfolai/home/static/home/: sidebar.css  sidebar.js  styles.css
portfolai/home/static/home/dashboard/: dashboard.css  dashboard.js
portfolai/home/static/home/finance/: finance-dashboard.css  finance-dashboard.js
portfolai/home/templates/home/: base.html  dashboard.html  finance_dashboard.html  index.html  landing_base.html
portfolai/mysite/: asgi.py  settings.py  urls.py
portfolai/portfolai/: settings.py  urls.py
portfolai/static/: style.css
portfolai/staticfiles/chat/: chat.js  chat_style.css
portfolai/staticfiles/home/css/: style.css
portfolai/staticfiles/home/js/: api.js  stock.js  ui.js  utils.js  watchlist.js
portfolai/staticfiles/landing/: saasy-custom.css  saasy.js  tailwind-build.css
portfolai/templates/: base.html  home.html  landing.html
